// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress.ts should render component and match snapshot 1`] = `
<div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="33" class="progress" style="height: 32px; width: 32px;"><svg style="transform: rotate(0deg);" xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715">
    <circle class="progress__underlay" fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="0"></circle>
    <circle class="progress__overlay" fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="84.19468311620646px"></circle>
  </svg>
  <div class="progress__info"></div>
</div>
`;

exports[`Progress.ts should render component with default slot and match snapshot 1`] = `
<div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="33" class="progress" style="height: 32px; width: 32px;"><svg style="transform: rotate(0deg);" xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715">
    <circle class="progress__underlay" fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="0"></circle>
    <circle class="progress__overlay" fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="84.19468311620646px"></circle>
  </svg>
  <div class="progress__info">33</div>
</div>
`;

exports[`Progress.ts should render component with indeterminate prop and match snapshot 1`] = `
<div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="progress progress--indeterminate" style="height: 32px; width: 32px;"><svg style="transform: rotate(0deg);" xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715">
    <!---->
    <circle class="progress__overlay" fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px"></circle>
  </svg>
  <div class="progress__info"></div>
</div>
`;

exports[`Progress.ts should render component with rotate prop and match snapshot 1`] = `
<div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="33" class="progress" style="height: 32px; width: 32px;"><svg style="transform: rotate(44deg);" xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715">
    <circle class="progress__underlay" fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="0"></circle>
    <circle class="progress__overlay" fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="84.19468311620646px"></circle>
  </svg>
  <div class="progress__info"></div>
</div>
`;

exports[`Progress.ts should render component with size prop and match snapshot 1`] = `
<div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="33" class="progress" style="height: 16px; width: 16px;"><svg style="transform: rotate(0deg);" xmlns="http://www.w3.org/2000/svg" viewBox="26.666666666666668 26.666666666666668 53.333333333333336 53.333333333333336">
    <circle class="progress__underlay" fill="transparent" cx="53.333333333333336" cy="53.333333333333336" r="20" stroke-width="13.333333333333334" stroke-dasharray="125.664" stroke-dashoffset="0"></circle>
    <circle class="progress__overlay" fill="transparent" cx="53.333333333333336" cy="53.333333333333336" r="20" stroke-width="13.333333333333334" stroke-dasharray="125.664" stroke-dashoffset="84.19468311620646px"></circle>
  </svg>
  <div class="progress__info"></div>
</div>
`;

exports[`Progress.ts should render component with width prop and match snapshot 1`] = `
<div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="33" class="progress" style="height: 32px; width: 32px;"><svg style="transform: rotate(0deg);" xmlns="http://www.w3.org/2000/svg" viewBox="20.64516129032258 20.64516129032258 41.29032258064516 41.29032258064516">
    <circle class="progress__underlay" fill="transparent" cx="41.29032258064516" cy="41.29032258064516" r="20" stroke-width="1.2903225806451613" stroke-dasharray="125.664" stroke-dashoffset="0"></circle>
    <circle class="progress__overlay" fill="transparent" cx="41.29032258064516" cy="41.29032258064516" r="20" stroke-width="1.2903225806451613" stroke-dasharray="125.664" stroke-dashoffset="84.19468311620646px"></circle>
  </svg>
  <div class="progress__info"></div>
</div>
`;
